@@ -25,6 +25,7 @@ import java.util.Collections;
 import java.util.List;
 
 import org.apache.tika.metadata.Metadata;
+import org.apache.tika.metadata.TikaCoreProperties;
 import org.apache.tika.mime.MediaType;
 import org.apache.tika.mime.MediaTypeRegistry;
 
@@ -74,6 +75,12 @@ public class CompositeDetector implements Detector {
             throws IOException { 
         MediaType type = MediaType.OCTET_STREAM;
         for (Detector detector : getDetectors()) {
+            //short circuit via OverrideDetector
+            //can't rely on ordering because subsequent detector may
+            //change Override's to a specialization of Override's
+            if (detector instanceof OverrideDetector && metadata.get(TikaCoreProperties.CONTENT_TYPE_OVERRIDE) != null) {
+                return detector.detect(input, metadata);
+            }
             MediaType detected = detector.detect(input, metadata);
             if (registry.isSpecializationOf(detected, type)) {
                 type = detected;
