@@ -1,0 +1,41 @@
+/*
+ * Licensed to the Apache Software Foundation (ASF) under one or more
+ * contributor license agreements.  See the NOTICE file distributed with
+ * this work for additional information regarding copyright ownership.
+ * The ASF licenses this file to You under the Apache License, Version 2.0
+ * (the "License"); you may not use this file except in compliance with
+ * the License.  You may obtain a copy of the License at
+ *
+ *     http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+package org.apache.tika.detect;
+
+import org.apache.tika.metadata.Metadata;
+import org.apache.tika.metadata.TikaCoreProperties;
+import org.apache.tika.mime.MediaType;
+
+import java.io.IOException;
+import java.io.InputStream;
+
+/**
+ * Use this to force a content type detection via the
+ * {@link TikaCoreProperties#CONTENT_TYPE_OVERRIDE} key in the metadata object.
+ */
+public class OverrideDetector implements Detector {
+
+    @Override
+    public MediaType detect(InputStream input, Metadata metadata) throws IOException {
+        String type = metadata.get(TikaCoreProperties.CONTENT_TYPE_OVERRIDE);
+        if (type == null) {
+            return MediaType.OCTET_STREAM;
+        } else {
+            return MediaType.parse(type);
+        }
+    }
+}
