@@ -13,5 +13,6 @@
 #  See the License for the specific language governing permissions and
 #  limitations under the License.
 
+org.apache.tika.detect.OverrideDetector
 org.apache.tika.parser.microsoft.POIFSContainerDetector
 org.apache.tika.parser.pkg.ZipContainerDetector
